JumpScript/tests/baselines/reference/FunctionDeclaration3.errors.txt
tests/cases/compiler/FunctionDeclaration3.jump(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/FunctionDeclaration3.jump (1 errors) ====
    function foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.